data/diff_tests/wasmtime/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3828.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\02\93\80\80\80\00\01\03"
    "\65\6e\76\0b\69\6d\70\6f\72\74\65\64\5f\66\6e\00"
    "\00\03\82\80\80\80\00\01\01\0a\8f\80\80\80\00\01"
    "\89\80\80\80\00\00\41\01\41\00\6d\10\00\0b"
  )
""
)